# NoctisViewer

./: .gitattributes  .gitignore  CMakeLists.txt  README.ja.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  build_native.bat  noctis_viewer.cpp  noctis_viewer.rc  resource.h  极简图片浏览器需求.md
